# em-intro

./: .gitignore  Makefile  README.md  fire.js  floor.js  font.js  graph.js  index.html  logo.js  main.js  mod.js  scroller.js  sprite.js  stars.js  style.css
scripts/: build.sh  serve.sh  setup.sh
zephyr/: CMakeLists.txt  Makefile.web  prj.conf  sdram.ld
zephyr/boards/: stm32h747i_disco_stm32h747xx_m7.overlay
zephyr/scripts/: png2rgb565.py
zephyr/src/: fire.c  fire.h  floor.c  floor.h  font.c  font.h  graph.c  graph.h  logo.c  logo.h  logo_data.h  main.c  prng.h  scroller.c  scroller.h  sprite.c  sprite.h  stars.c  stars.h
zephyr/web/: demo.js  demo.wasm
